--- a/Tracker/src/main/resources/templates/list-files.html
+++ b/Tracker/src/main/resources/templates/list-files.html
@@ -2,6 +2,23 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>File List</title>
+    <style>
+        table {
+            width: 50%;
+            margin: auto;
+            border-collapse: collapse;
+        }
+
+        th, td {
+            padding: 10px;
+            text-align: left;
+            border: 1px solid #ddd;
+        }
+
+        th {
+            background-color: #f4f4f4;
+        }
+    </style>
 </head>
 <body>
 <h1>Uploaded Files</h1>
